objects/ServiceResource.object
<CustomObject>
    <fields>
        <fullName>Accel_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Accel User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ActivityStatus__c</fullName>
        <label>ActivityStatus</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appointments_in_Queue__c</fullName>
        <description>DLRS field is used to count the number of service appointments a Service Resource has on its schedule for the rest of the day.</description>
        <inlineHelpText>DLRS field is used to count the number of service appointments a Service Resource has on its schedule for the rest of the day.</inlineHelpText>
        <label>Appointments in Queue</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Efficiency__c</fullName>
        <label>Efficiency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__GanttLabel__c</fullName>
        <label>Gantt Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FSL__Online_Offset__c</fullName>
        <description>Online offset in minutes</description>
        <label>Online Offset</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Picture_Link__c</fullName>
        <label>Picture Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FSL__Priority__c</fullName>
        <label>Priority</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Travel_Speed__c</fullName>
        <label>Travel Speed</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeotabId__c</fullName>
        <label>GeotabId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeotabSerial__c</fullName>
        <label>GeotabSerial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Last_Resource_Absence_Message__c</fullName>
        <formula>&quot;Click &apos;Save&apos; to Update Resource Absence time.&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Get Last Known Location Message</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Get_Service_Resource_Last_RA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to trigger the Service Resource Last Known Location button/flow.</description>
        <label>Get Service Resource Last RA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Location__c</fullName>
        <label>Home Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Live_with_WM_Scheduling_Enhancements__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicates whether this Service Resource is part of a Service Territory which is live with the scheduling enhancements built out by West Monroe in 2022.</inlineHelpText>
        <label>Live with WM Scheduling Enhancements</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Service Territory for filtering the schedule List View for Shifts.</description>
        <inlineHelpText>Lookup to Service Territory for filtering the schedule List View for Shifts.</inlineHelpText>
        <label>Primary Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Service Resources</relationshipLabel>
        <relationshipName>Service_Resources</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Technician_Type__c</fullName>
        <label>Technician Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Vgt</fullName>
                </value>
                <value>
                    <fullName>Amusement</fullName>
                </value>
                <value>
                    <fullName>Both Vgt &amp; Amusement</fullName>
                </value>
                <value>
                    <fullName>PM</fullName>
                </value>
                <value>
                    <fullName>Partner Operator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <formula>Accel_User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <label>VIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_digit_Id__c</fullName>
        <formula>CASESAFEID( User_ID__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 digit Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>secureGPS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>secureGPS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trackerid__c</fullName>
        <description>Donlen link, DO NOT MODIFY</description>
        <label>trackerid</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_Resources_without_GeoTab_ID</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>trackerid__c</columns>
        <columns>GeotabId__c</columns>
        <columns>ActivityStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GeotabId__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Resources without GeoTab ID</label>
    </listViews>
    <listViews>
        <fullName>Active_Resources_without_TrackerID</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>trackerid__c</columns>
        <columns>Id</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>trackerid__c</field>
            <operation>equals</operation>
        </filters>
        <label>Active Resources without TrackerID</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Service_Resources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>Accel_User__c</columns>
        <columns>ResourceType</columns>
        <columns>Technician_Type__c</columns>
        <columns>IsActive</columns>
        <columns>trackerid__c</columns>
        <columns>GeotabId__c</columns>
        <columns>Id</columns>
        <columns>GeotabSerial__c</columns>
        <columns>Primary_Service_Territory__c</columns>
        <columns>Location</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Service Resources</label>
    </listViews>
    <listViews>
        <fullName>All_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>Accel_User__c</columns>
        <columns>ResourceType</columns>
        <columns>Technician_Type__c</columns>
        <columns>IsActive</columns>
        <columns>trackerid__c</columns>
        <columns>GeotabId__c</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Resources</label>
    </listViews>
    <listViews>
        <fullName>Broken_GPS</fullName>
        <booleanFilter>1 AND (2 OR 3)</booleanFilter>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>GeotabId__c</columns>
        <columns>trackerid__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>trackerid__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>GeotabId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Broken GPS</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_Active_Resources_with_TrackerID</fullName>
        <columns>Name</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>trackerid__c</columns>
        <columns>GeotabId__c</columns>
        <columns>ActivityStatus__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IsActive</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>GeotabId__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Active Resources with GeoTab ID</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceResources</fullName>
        <columns>Name</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <columns>IsActive</columns>
        <columns>LastModifiedBy</columns>
        <columns>LastModifiedDate</columns>
        <filterScope>Mine</filterScope>
        <label>My Service Resources</label>
    </listViews>
    <listViews>
        <fullName>PM_Tech_List</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>Primary_Service_Territory__c</columns>
        <columns>Technician_Type__c</columns>
        <columns>LastModifiedDate</columns>
        <columns>LastModifiedBy</columns>
        <columns>RelatedRecord</columns>
        <columns>ResourceType</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Technician_Type__c</field>
            <operation>equals</operation>
            <value>PM</value>
        </filters>
        <label>PM Tech List</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>FSL__Capacity_Resource_of_Type_Crew</fullName>
        <active>false</active>
        <errorConditionFormula>AND(IsCapacityBased,ISPICKVAL(ResourceType, &apos;C&apos;))</errorConditionFormula>
        <errorMessage>Capacity Resource Can&apos;t Be of Type Crew</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Resource_travel</fullName>
        <active>true</active>
        <errorConditionFormula>FSL__Travel_Speed__c &lt;= 0</errorConditionFormula>
        <errorDisplayField>FSL__Travel_Speed__c</errorDisplayField>
        <errorMessage>Resource travel speed must be greater than 0.</errorMessage>
    </validationRules>
</CustomObject>